--- a/macaron-git/index.html
+++ b/macaron-git/index.html
@@ -29,7 +29,7 @@
   <section id="main-visual">
     <div class="container mv-wrapper">
       <div class="mv-right">
-        <h1>DAWN macaron</h1>
+        <h1>DAWN macarongggggggggggggggggggggggggggg</h1>
         <p class="text">ひとくちにしあわせは宿る</p>
         <div class="purchase-button">
           <a href="#lineup">ご購入はこちら</a>
